z-index problem solved

--- a/src/components/frontDesign/video/Control.css
+++ b/src/components/frontDesign/video/Control.css
@@ -59,3 +59,11 @@
   display: flex;
   align-items: center;
  }
+
+ .css-1fkkb0b-MuiSlider-root {
+   color: white !important;
+ }
+
+ .css-188mx6n-MuiSlider-root{
+   color: white !important
+ }
