--- a/src/components/frontDesign/video/Video.css
+++ b/src/components/frontDesign/video/Video.css
@@ -4,16 +4,15 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  z-index: 30;
+  z-index: 3;
 }
 
 .player__wrapper {
   position: relative;
-  z-index: 20;
 }
 
 .player {
-  border: 2px solid #7b2cbf;
+  /* border: 2px solid #7b2cbf; */
   object-fit: cover;
   padding: 0;
   margin: 0;
